--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     }
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
+    "test": "mocha",
     "eslint": "eslint"
   },
   "repository": {
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.48.1",
+    "bluebird": "^3.7.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
