--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     "rest",
     "fetch"
   ],
-  "author": "Aleksei Anisimov <i@trendco.dev>",
+  "author": "Aleksei Anisimov <i@1xtr.dev>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/1xtr/apiapi/issues"
   },
   "homepage": "https://github.com/1xtr/apiapi",
   "dependencies": {
-    "axios": "^1.2.2",
-    "axios-rate-limit": "^1.3.0",
-    "debug": "^4.3.4",
-    "lodash": "^4.17.21",
-    "shitty-qs": "^1.0.1"
+    "axios": "^1.6.7",
+    "axios-rate-limit": "1.3.0",
+    "debug": "4.3.4",
+    "http-build-query": "^0.7.0",
+    "lodash": "4.17.21",
+    "shitty-qs": "1.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.48.1",
